--- a/src/infrastructure/config/env/.env.local
+++ b/src/infrastructure/config/env/.env.local
@@ -1,13 +1,13 @@
-PORT=
+PORT=3030
 
 SQL_DB=""
 SQL_USERNAME=""
 SQL_PASSWORD=""
 SQL_HOST=""
-SQL_PORT=
-SQL_DIALECT=""
+SQL_PORT=5432
+SQL_DIALECT="postgres"
 
-CRYPTO_SECRET=""
+CRYPTO_SECRET="xxxxxxx"
 BASE_URL=""
 
 AWS_ACCESS_KEY_ID=""
