--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "base-api",
   "version": "1.0.0",
   "scripts": {
+    "start": "yarn start:local",
     "local": "yarn start:local",
     "dev": "yarn start:dev",
     "test": "yarn start:test",
@@ -23,7 +24,6 @@
   "author": "Mariano Ravinale <mravinale@tierone.cc>",
   "license": "MIT",
   "dependencies": {
-    "@defer/client": "^2.2.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -53,6 +53,7 @@
     "@types/sinon": "^10.0.12",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/reflect-metadata": "^0.1.0",
     "chai": "^4.3.6",
     "concurrently": "^7.2.2",
     "faker": "^6.6.6",
@@ -62,11 +63,12 @@
     "randomstring": "^1.2.2",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4",
-    "ts-mockito": "^2.6.1",
-    "ts-node": "^10.8.2",
-    "ts-node-dev": "^2.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "ts-mockito": "2.6.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "tslint": "6.1.3",
+    "typescript": "4.9.5"
   },
   "resolutions": {
     "string-width": "4.2.3"
