--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
+    "better-auth": "^1.2.4",
     "body-parser": "^1.20.0",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
