--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "env:local": "cross-env NODE_ENV=local",
     "env:dev": "cross-env NODE_ENV=development",
     "env:test": "cross-env NODE_ENV=test",
-    "build": "yarn build:tsoa && tsc && yarn copy:env",
+    "build": "yarn build:tsoa && tsc -p tsconfig-automapper.json && yarn copy:env",
     "build:debug": "yarn build:tsoa && tsc --p tsconfig-debug.json",
     "build:tsoa": "tsoa spec-and-routes",
     "lint": "yarn build && tslint -c \"./tslint.json\" -p \"./tsconfig.json\"",
@@ -24,6 +24,8 @@
   "author": "Mariano Ravinale <mravinale@tierone.cc>",
   "license": "MIT",
   "dependencies": {
+    "@automapper/classes": "^8.8.1",
+    "@automapper/core": "^8.8.1",
     "axios": "^1.6.7",
     "better-auth": "^1.2.4",
     "body-parser": "^1.20.0",
@@ -37,7 +39,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.2",
     "sanitize-html": "^2.11.0",
     "swagger-ui-express": "^4.5.0",
     "tsoa": "^4.1.0",
@@ -52,10 +54,10 @@
     "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.4",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/sinon": "^10.0.12",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/reflect-metadata": "^0.1.0",
     "chai": "^4.3.6",
     "concurrently": "^7.2.2",
     "faker": "^6.6.6",
@@ -70,7 +72,7 @@
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tslint": "6.1.3",
-    "typescript": "4.9.5"
+    "typescript": "^5.7.3"
   },
   "resolutions": {
     "string-width": "4.2.3"
