--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.2.0",
     "sanitize-html": "^2.11.0",
     "swagger-ui-express": "^4.5.0",
     "tsoa": "^4.1.0",
