--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "local": "yarn start:local",
     "dev": "yarn start:dev",
     "test": "yarn start:test",
-    "start:local": "yarn build && yarn env:local nodemon",
-    "start:dev": "yarn build && yarn env:dev ts-node-dev ./dist/src/index.js",
+    "start:local": "yarn build:tsoa && yarn env:local tsc-watch -p tsconfig.json --onSuccess \"node ./dist/src/index.js\"",
+    "start:dev": "yarn build && yarn env:dev node ./dist/src/index.js",
     "start:test": "yarn build && yarn lint && yarn env:test nyc mocha --timeout 35000 ./dist/src/application/**/test/*.spec.js ./dist/src/infrastructure/**/test/*.spec.js --exit",
     "env:local": "cross-env NODE_ENV=local",
     "env:dev": "cross-env NODE_ENV=development",
     "env:test": "cross-env NODE_ENV=test",
-    "build": "yarn build:tsoa && tsc -p tsconfig-automapper.json && yarn copy:env",
-    "build:debug": "yarn build:tsoa && tsc --p tsconfig-debug.json",
+    "build": "yarn build:tsoa && tsc -p tsconfig.json && yarn copy:env",
+    "build:debug": "yarn build:tsoa && tsc -p tsconfig-debug.json",
     "build:tsoa": "tsoa spec-and-routes",
     "lint": "yarn build && tslint -c \"./tslint.json\" -p \"./tsconfig.json\"",
     "clean": "rm -rf ./dist && rm -rf ./build && mkdir build",
@@ -55,7 +55,7 @@
     "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.4",
-    "@types/reflect-metadata": "^0.1.0",
+    "@types/reflect-metadata": "0.1.0",
     "@types/sinon": "^10.0.12",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
@@ -63,7 +63,6 @@
     "concurrently": "^7.2.2",
     "faker": "^6.6.6",
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.19",
     "nyc": "^15.1.0",
     "randomstring": "^1.2.2",
     "sinon": "^14.0.0",
@@ -71,6 +70,7 @@
     "ts-mockito": "2.6.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "2.0.0",
+    "tsc-watch": "^6.2.1",
     "tsconfig-paths": "^4.2.0",
     "tslint": "6.1.3",
     "typescript": "^5.7.3"
