--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,21 +13,21 @@
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
-    "types": ["reflect-metadata", "mocha"],                       /* Specify type package names to be included without being referenced in a source file. */
+    "types": ["node", "mocha"],                          /* Specify type package names to be included without being referenced in a source file. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
 
     /* Emit */
-    "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
-    "inlineSources": true,                               /* Include source code in the sourcemaps inside the emitted JavaScript. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "outDir": "./dist",
+    "rootDir": ".",
+    "baseUrl": ".",
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "noImplicitReturns": true,
     "noImplicitAny": false,
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": ["./node_modules/@types", "./node_modules/reflect-metadata",  "./src/types"],
   }
 }
