--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "scripts": {
     "start": "yarn start:local",
     "local": "yarn start:local",
-    "dev": "yarn start:dev",
+    "dev": "yarn env:dev ts-node-dev --respawn --transpile-only ./src/index.ts",
     "test": "yarn start:test",
+    "test:file": "yarn build && yarn lint && yarn env:test nyc mocha --timeout 35000",
     "start:local": "yarn build:tsoa && yarn env:local tsc-watch -p tsconfig.json --onSuccess \"node ./dist/src/index.js\"",
     "start:dev": "yarn build && yarn env:dev node ./dist/src/index.js",
     "start:test": "yarn build && yarn lint && yarn env:test nyc mocha --timeout 35000 ./dist/src/application/**/test/*.spec.js ./dist/src/infrastructure/**/test/*.spec.js --exit",
     "env:local": "cross-env NODE_ENV=local",
     "env:dev": "cross-env NODE_ENV=development",
+    "env:prod": "cross-env NODE_ENV=production",
     "env:test": "cross-env NODE_ENV=test",
     "build": "yarn build:tsoa && tsc -p tsconfig.json && yarn copy:env",
     "build:debug": "yarn build:tsoa && tsc -p tsconfig-debug.json",
@@ -56,7 +58,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.4",
     "@types/reflect-metadata": "0.1.0",
-    "@types/sinon": "^10.0.12",
+    "@types/sinon": "^17.0.3",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.6",
@@ -65,7 +67,7 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "randomstring": "^1.2.2",
-    "sinon": "^14.0.0",
+    "sinon": "^17.0.2",
     "supertest": "^6.2.4",
     "ts-mockito": "2.6.1",
     "ts-node": "^10.9.2",
