--- a/src/infrastructure/config/env/.env.development
+++ b/src/infrastructure/config/env/.env.development
@@ -1,15 +1,18 @@
-PORT=
+PORT=3030
 
-SQL_DB=""
-SQL_USERNAME=""
+SQL_DB="base.api"
+SQL_USERNAME="mravinale"
 SQL_PASSWORD=""
-SQL_HOST=""
-SQL_PORT=
-SQL_DIALECT=""
+SQL_HOST="localhost"
+SQL_PORT=5432
+SQL_DIALECT="postgres"
 
-CRYPTO_SECRET=""
-BASE_URL=""
+CRYPTO_SECRET="xxxxxxx"
+BASE_URL="http://localhost:3030"
 
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_MAINBUCKET=""
+
+RESEND_API_KEY="re_h8kJjw4M_2NNgcYvryZu9SbzDyBRCAgBj"
+DEFAULT_FROM_EMAIL="noreply@tierone.cc"
