--- a/src/infrastructure/config/env/.env.test
+++ b/src/infrastructure/config/env/.env.test
@@ -1,6 +1,6 @@
 PORT=3030
 
-SQL_DB="base.api"
+SQL_DB="base.api.test"
 SQL_USERNAME="mravinale"
 SQL_PASSWORD=""
 SQL_HOST="localhost"
@@ -8,8 +8,12 @@ SQL_PORT=5432
 SQL_DIALECT="postgres"
 
 CRYPTO_SECRET="xxxxxxx"
-BASE_URL=""
+BASE_URL="http://localhost:3030"
 
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_MAINBUCKET=""
+
+# Email - Resend.com
+RESEND_API_KEY=your_resend_api_key
+DEFAULT_FROM_EMAIL=noreply@yourdomain.com
