--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/node": "^18.0.4",
     "@types/reflect-metadata": "0.1.0",
     "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^4.0.0",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.6",
@@ -68,6 +69,7 @@
     "nyc": "^15.1.0",
     "randomstring": "^1.2.2",
     "sinon": "^17.0.2",
+    "sinon-chai": "^4.0.0",
     "supertest": "^6.2.4",
     "ts-mockito": "2.6.1",
     "ts-node": "^10.9.2",
