--- a/src/infrastructure/config/env/.env.local
+++ b/src/infrastructure/config/env/.env.local
@@ -1,18 +1,18 @@
-PORT=3030
+PORT=
 
-SQL_DB="base.api"
-SQL_USERNAME="mravinale"
+SQL_DB=""
+SQL_USERNAME=""
 SQL_PASSWORD=""
-SQL_HOST="localhost"
-SQL_PORT=5432
-SQL_DIALECT="postgres"
+SQL_HOST=""
+SQL_PORT=
+SQL_DIALECT=""
 
-CRYPTO_SECRET="xxxxxxx"
-BASE_URL="http://localhost:3030"
+CRYPTO_SECRET=""
+BASE_URL=""
 
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_MAINBUCKET=""
 
-RESEND_API_KEY="re_h8kJjw4M_2NNgcYvryZu9SbzDyBRCAgBj"
-DEFAULT_FROM_EMAIL="noreply@tierone.cc"
+RESEND_API_KEY=""
+DEFAULT_FROM_EMAIL=""
