--- a/src/infrastructure/config/env/.env.test
+++ b/src/infrastructure/config/env/.env.test
@@ -1,19 +1,18 @@
-PORT=3030
+PORT=
 
-SQL_DB="base.api.test"
-SQL_USERNAME="mravinale"
+SQL_DB=""
+SQL_USERNAME=""
 SQL_PASSWORD=""
-SQL_HOST="localhost"
-SQL_PORT=5432
-SQL_DIALECT="postgres"
+SQL_HOST=""
+SQL_PORT=
+SQL_DIALECT=""
 
-CRYPTO_SECRET="xxxxxxx"
-BASE_URL="http://localhost:3030"
+CRYPTO_SECRET=""
+BASE_URL=""
 
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_MAINBUCKET=""
 
-# Email - Resend.com
-RESEND_API_KEY=your_resend_api_key
-DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+RESEND_API_KEY=""
+DEFAULT_FROM_EMAIL=""
