yarn clean added

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -60,7 +60,7 @@ jobs:
           EOF
 
       - name: Build
-        run: yarn build:tsoa && yarn build
+        run: yarn clean && yarn build
 
       - name: Lint
         run: yarn lint
