--- a/src/infrastructure/config/env/.env.development
+++ b/src/infrastructure/config/env/.env.development
@@ -14,5 +14,5 @@ AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_MAINBUCKET=""
 
-RESEND_API_KEY="re_h8kJjw4M_2NNgcYvryZu9SbzDyBRCAgBj"
-DEFAULT_FROM_EMAIL="noreply@tierone.cc"
+RESEND_API_KEY=your_resend_api_key
+DEFAULT_FROM_EMAIL=noreply@yourdomain.com
